--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.2",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "astro": "^3.1.1",
-    "sass": "^1.67.0"
+    "framer-motion": "^10.16.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.67.0",
+    "usehooks-ts": "^2.9.1"
   }
 }
