--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.2",
+    "@emailjs/browser": "^3.11.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "astro": "^3.1.1",
@@ -19,5 +20,8 @@
     "react-dom": "^18.2.0",
     "sass": "^1.67.0",
     "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.7.1"
   }
 }
