--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@types/node": "^20.7.1"
+    "@types/node": "^20.7.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.1"
   }
 }
