--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "^18.2.7",
     "astro": "^3.1.1",
     "framer-motion": "^10.16.4",
+    "postcss": "^8.4.31",
+    "postcss-scss": "^4.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-indiana-drag-scroll": "^3.0.3-alpha",
@@ -25,7 +27,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.7.1",
-    "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.1"
+    "@typescript-eslint/parser": "^6.11.0",
+    "prettier": "^3.1.0",
+    "prettier-plugin-astro": "^0.12.2"
   }
 }
