--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-indiana-drag-scroll": "^3.0.3-alpha",
-    "sass": "^1.67.0",
-    "usehooks-ts": "^2.9.1"
+    "sass": "^1.67.0"
   },
   "devDependencies": {
     "@types/node": "^20.7.1",
