feat: Astro added in technologies

--- a/src/assets/knowledge.json
+++ b/src/assets/knowledge.json
@@ -3,42 +3,55 @@
     "title": "HTML5",
     "color": "#e5532d",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "main"
   },
   {
     "title": "CSS3",
     "color": "#3d9dd7",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "main"
   },
   {
     "title": "Sass",
     "color": "#cc6699",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "frontLib"
   },
   {
     "title": "Tailwindcss",
     "color": "#44a8b3",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "frontLib"
   },
   {
     "title": "Bootstap",
     "color": "#7e18f9",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "frontLib"
   },
   {
     "title": "JavaScript",
     "color": "#f0dc55",
     "visibleOnHome": true,
-    "sections": ["Front", "Back"],
+    "sections": [
+      "Front",
+      "Back"
+    ],
     "subsection": "main",
     "invert": true
   },
@@ -46,42 +59,55 @@
     "title": "TypeScript",
     "color": "#377cc8",
     "visibleOnHome": true,
-    "sections": ["Front", "Back"],
+    "sections": [
+      "Front",
+      "Back"
+    ],
     "subsection": "main"
   },
   {
     "title": "React",
     "color": "#1ba1cc",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "main"
   },
   {
     "title": "Redux",
     "color": "#7a50be",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "frontLib"
   },
   {
     "title": "Astro",
     "color": "#fc5d03",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "main"
   },
   {
     "title": "AntDesign",
     "color": "#1874f7",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "frontLib"
   },
   {
     "title": "MaterialUI",
     "color": "#08b2ff",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "frontLib",
     "invert": true
   },
@@ -89,14 +115,18 @@
     "title": "FramerMotion",
     "color": "#6455ff",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "frontLib"
   },
   {
     "title": "Figma",
     "color": "#12d086",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "design",
     "invert": true
   },
@@ -104,7 +134,9 @@
     "title": "NodeJs",
     "color": "#93c745",
     "visibleOnHome": true,
-    "sections": ["Back"],
+    "sections": [
+      "Back"
+    ],
     "subsection": "main",
     "invert": true
   },
@@ -112,77 +144,108 @@
     "title": "Express",
     "color": "#4c4c4c",
     "visibleOnHome": true,
-    "sections": ["Back"],
+    "sections": [
+      "Back"
+    ],
     "subsection": "main"
   },
   {
     "title": "i18n",
     "color": "#7986cb",
     "visibleOnHome": true,
-    "sections": ["Front"],
+    "sections": [
+      "Front"
+    ],
     "subsection": "frontLib"
+  },
+  {
+    "title": "Angular",
+    "color": "#dd0031",
+    "visibleOnHome": true,
+    "sections": [
+      "Front"
+    ],
+    "subsection": "main"
   },
   {
     "title": "JsonWebToken",
     "color": "#00b3e9",
     "visibleOnHome": true,
-    "sections": ["Back"],
+    "sections": [
+      "Back"
+    ],
     "subsection": "backLib"
   },
   {
     "title": "MySQL",
     "color": "#08668e",
     "visibleOnHome": true,
-    "sections": ["Back"],
+    "sections": [
+      "Back"
+    ],
     "subsection": "backLib"
   },
   {
     "title": "MongoDB",
     "color": "#579c4f",
     "visibleOnHome": true,
-    "sections": ["Back"],
+    "sections": [
+      "Back"
+    ],
     "subsection": "main"
   },
   {
     "title": "Heroku",
     "color": "#430098",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "cloud"
   },
   {
     "title": "Vercel",
     "color": "#4c4c4c",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "cloud"
   },
   {
     "title": "AWS",
     "color": "#ff9c08",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "cloud"
   },
   {
     "title": "Git",
     "color": "#f05639",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "extra"
   },
   {
     "title": "GitHub",
     "color": "#3b375d",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "extra"
   },
   {
     "title": "Copilot",
     "color": "#24c9d5",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "extra",
     "invert": true
   },
@@ -190,69 +253,91 @@
     "title": "Markdown",
     "color": "#4c4c4c",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "extra"
   },
   {
     "title": "Jira",
     "color": "#2684ff",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "scheduling"
   },
   {
     "title": "Clickup",
     "color": "#7b68ee",
     "visibleOnHome": true,
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "scheduling"
   },
   {
     "title": "Notion",
     "color": "#4c4c4c",
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "scheduling"
   },
   {
     "title": "Multer",
     "color": "#4c4c4c",
-    "sections": ["Back"],
+    "sections": [
+      "Back"
+    ],
     "subsection": "backLib"
   },
   {
     "title": "Mongoose",
     "color": "#a03333",
-    "sections": ["Back"],
+    "sections": [
+      "Back"
+    ],
     "subsection": "backLib"
   },
   {
     "title": "Sequelize",
     "color": "#3c76c3",
-    "sections": ["Back"],
+    "sections": [
+      "Back"
+    ],
     "subsection": "backLib"
   },
   {
     "title": "Photoshop",
     "color": "#31a8ff",
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "design"
   },
   {
     "title": "Illustrator",
     "color": "#f79500",
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "design"
   },
   {
     "title": "DigitalOcean",
     "color": "#0069ff",
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "cloud"
   },
   {
     "title": "Trello",
     "color": "#0078be",
-    "sections": ["Others"],
+    "sections": [
+      "Others"
+    ],
     "subsection": "scheduling"
   }
 ]
